@@ -1,6 +1,8 @@
 3 April 2019: Wouter
 	- Move goto label in answer_from_cache to the end of the function
 	  where it is more visible.
+	- Fix auth-zone NSEC3 response for wildcard nodata answers,
+	  include the closest encloser in the answer.
 
 2 April 2019: Wouter
 	- Fix auth-zone NSEC3 response for empty nonterminals with exact
